# ld2450-driver-test

./: CMakeLists.txt  README.md  sdkconfig.defaults.template
components/ld2450-driver/: CMakeLists.txt
components/ld2450-driver/include/: ld2450.h
components/ld2450-driver/src/: ld2450.c  ld2450_commands.c  ld2450_config.c  ld2450_parser.c  ld2450_private.h  protocol.h
components/ld2450_driver/src/: ld2450_parser.c
components/resource_monitor/: CMakeLists.txt
components/resource_monitor/include/: resource_monitor.h
components/resource_monitor/src/: resource_monitor.c
main/: CMakeLists.txt  ld2450_example.c  ld2450_test.c
